--- a/index.css
+++ b/index.css
@@ -91,6 +91,11 @@ svg{
         display: block;
     }
 }
+@media(max-width:650px){
+    .menu-navbar{
+        width: 100%;
+    }
+}
 #app{
     height: 100vh;
     z-index: -2;
@@ -312,6 +317,11 @@ article h2{
 #cart li{
     list-style: none;
 }
+@media(max-width:650px){
+    #cart{
+        width: 100%;
+    }
+}
 /*order*/
 #order-form{
     background-color: rgba(0, 0, 0, 0.375);
@@ -322,7 +332,8 @@ article h2{
     justify-content: space-around;
     align-items: center;
     padding: 40px;
-    width: 50%;
+    width: 90%;
+    max-width: 1224px;
     position: fixed;
     top: 20px;
     left: 0;
@@ -335,6 +346,7 @@ article h2{
     border-radius: 7px;
     margin: 10px;
     padding: 10px;
+    width: 90%;
 }
 #order-form button{
     border: none;
@@ -485,6 +497,7 @@ footer{
     justify-content: center;
     flex-direction: column;
     width: 100vw;
+    max-width: 1224px;
     height: 100vh;
     background-image: url(./images/pexels-reginaferraz-6133303.jpg);
     background-size: cover;
@@ -493,13 +506,14 @@ footer{
 #register-form{
     margin: auto;
     display: flex;
-    width: 50%;
+    width: 90%;
+    max-width: 1224px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.267);
     mix-blend-mode: blur(50px);
-    color: white;padding: 50px 20px;
+    color: white;padding: 30px 20px;
     border-radius: 12px;
 }
 #register-form input{
@@ -508,6 +522,7 @@ footer{
     padding: 17px 10px 17px 7px;
     border: none;
     border-radius: 20px;
+    width: 90%;
 
 }
 #register-form button{
@@ -521,13 +536,14 @@ footer{
     text-align: center;
     margin: auto;
     display: flex;
-    width: 50%;
+    width: 90%;
+    max-width: 1224px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgba(39, 37, 37, 0.768);
-    mix-blend-mode: blur(20px);
-    color: white;padding: 50px 20px;
+    background-color: rgba(0, 0, 0, 0.267);
+    mix-blend-mode: blur(50px);
+    color: white;padding: 30px 20px;
     border-radius: 12px;
 }
 #login-form button{
@@ -539,6 +555,7 @@ footer{
 }
 #login-form input{
     display: block;
+    width: 90%;
     margin: 20px 0px;
     padding: 17px 10px 17px 7px;
     border: none;
